# Candle

src/: CMakeLists.txt  frmabout.cpp  frmmain.cpp  frmmain.h  frmsettings.cpp  main.cpp
src/parser/: gcodepreprocessorutils.cpp
src/widgets/: colorpicker.cpp  glwidget.cpp  glwidget.h  styledtoolbutton.h
